# crisisIQ

./: .gitignore  README.md
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/context/: DispatchSimulationContext.tsx  IncidentContext.tsx  WorkspaceContext.tsx
client/src/data/: dashboard.ts  (+2 more)
server/: .dockerignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
server/alembic/: env.py
server/app/: main.py
server/app/api/: router.py
server/app/api/routes/: ai.py  auth.py  dispatch.py  health.py  incident.py  notification.py  resource.py  timeline.py  user.py  websocket.py
server/app/core/: config.py  security.py  settings.py
server/app/database/: database.py  session.py
server/app/dependencies/: auth.py
server/app/models/: __init__.py  access_control.py  audit.py  dispatch.py  incident.py  notification.py  resource.py  setting.py  timeline.py  token.py  user.py
server/app/repositories/: __init__.py  dispatch_repository.py  incident_repository.py  notification_repository.py  resource_repository.py  timeline_repository.py  user_repository.py
server/app/schemas/: __init__.py  ai.py  dispatch.py  incident.py  notification.py  resource.py  timeline.py  user.py
server/app/services/: __init__.py  ai_service.py  dispatch_service.py  incident_service.py  notification_service.py  resource_service.py  timeline_service.py  user_service.py
server/app/websocket/: manager.py
server/tests/api/: test_smoke.py
server/tests/services/: test_security.py
(+45 files in other folders)
